--- a/example.html
+++ b/example.html
@@ -3,13 +3,21 @@
 
 <head>
     <title>Title</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta name="description" content="" />
+    <link rel="stylesheet" type="text/css" href="example.css" />
 </head>
 
 <body>
     <header>
-        <pre><b>NAME:</b> GRACE NKAZI                                        EMAIL: pleina1@yahoo.fr
-<b>CONTACT:</b> ()                                              LINKEDIN: linkedin.com/in/grace-nkazi
-<b>ADRESS:</b> HOUSTON, TX:</pre>
+        <pre><b>NAME:</b> GRACE NKAZI                          
+EMAIL: pleina1@yahoo.fr
+<b>CONTACT:</b> ()
+LINKEDIN: <a href="linkedin.com/in/grace-nkazi">grace-nkaziLinkedin</a>
+<b>ADRESS:</b> HOUSTON, TX:
+<a href="https://github.com/GraceNkazi">grace-nkaziGithub</a></pre>
+        <br>
+        <img src="./personnal Training/images/Grace pic.jpg" alt="grace-nkazi">
     </header>
     <div class="summary">
         <hr>
