--- a/About.html
+++ b/About.html
@@ -5,6 +5,7 @@
     <title>Hello, world!</title>
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta name="description" content="" />
+    <script></script>
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="icon" href="favicon.png" />
   </head>
